deny-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: default-deny
 namespace: roboshop
spec:
 podSelector: {}
 policyTypes:
  - Ingress
