mongodb-catalogue.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: mongodb-catalogue
 namespace: roboshop
spec:
 podSelector:
  matchLabels:
   project: roboshop
   tier: db
   component: mongodb
 policyTypes:
  - Ingress
 ingress:
  - from:
     - podSelector:
        matchLabels:
         project: roboshop
         tier: backend
         component: catalogue
    ports:
     - protocol: TCP
       port: 27017
